--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Turret+Road:wght@500&display=swap");
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -46,9 +47,14 @@
 
 .box div {
   text-align: center;
+  padding-top: 12px;
 }
 
 .box div input {
   width: 80%;
+  padding: 8px;
+  font-family: Turret Road;
+  font-size: 20px;
+  margin-top: 10px;
 }
 /*# sourceMappingURL=style.css.map */
