added all inputs

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -38,7 +38,7 @@
 }
 
 .box {
-  height: 400px;
+  height: auto;
   width: 400px;
   border: 1px solid;
   border-radius: 7px;
@@ -56,5 +56,13 @@
   font-family: Turret Road;
   font-size: 20px;
   margin-top: 10px;
+}
+
+.box div textarea {
+  width: 80%;
+  padding: 5px;
+  font-family: Turret Road;
+  margin-top: 10px;
+  font-size: 18px;
 }
 /*# sourceMappingURL=style.css.map */
