--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Turret+Road:wght@500&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -44,11 +45,38 @@ $box-bg: #f5f5f5;
     }
 
     textarea {
+      resize: vertical;
       width: 80%;
       padding: 5px;
       font-family: Turret Road;
       margin-top: 10px;
       font-size: 18px;
+    }
+
+    button {
+      position: relative;
+      margin: 10px 0px;
+      padding: 8px 30px;
+      border-radius: 0px;
+      border: 1px solid;
+      background-color: #2197dd;
+      font-family: Roboto;
+      font-size: 18px;
+      cursor: pointer;
+      color: white;
+
+      &:hover {
+        animation: animate 0.5s linear forwards;
+      }
+
+      @keyframes animate {
+        from {
+          background-color: none;
+        }
+        to {
+          background-color: #037cc2;
+        }
+      }
     }
   }
 }
