--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -59,10 +59,47 @@
 }
 
 .box div textarea {
+  resize: vertical;
   width: 80%;
   padding: 5px;
   font-family: Turret Road;
   margin-top: 10px;
   font-size: 18px;
+}
+
+.box div button {
+  position: relative;
+  margin: 10px 0px;
+  padding: 8px 30px;
+  border-radius: 0px;
+  border: 1px solid;
+  background-color: #2197dd;
+  font-family: Roboto;
+  font-size: 18px;
+  cursor: pointer;
+  color: white;
+}
+
+.box div button:hover {
+  -webkit-animation: animate 0.5s linear forwards;
+          animation: animate 0.5s linear forwards;
+}
+
+@-webkit-keyframes animate {
+  from {
+    background-color: none;
+  }
+  to {
+    background-color: #037cc2;
+  }
+}
+
+@keyframes animate {
+  from {
+    background-color: none;
+  }
+  to {
+    background-color: #037cc2;
+  }
 }
 /*# sourceMappingURL=style.css.map */
