switched to template engine for flash messages

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -37,6 +37,28 @@
   font-family: Roboto;
 }
 
+.container .mini-container .success-alert {
+  width: 400px;
+  border: 1px solid black;
+  text-align: center;
+  padding: 10px;
+  margin-bottom: 5px;
+  font-family: Roboto;
+  background: #4cb050;
+  color: white;
+}
+
+.container .mini-container .fail-alert {
+  width: 400px;
+  border: 1px solid black;
+  text-align: center;
+  padding: 10px;
+  margin-bottom: 5px;
+  font-family: Roboto;
+  background: #d70000;
+  color: white;
+}
+
 .box {
   height: auto;
   width: 400px;
