--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <div class="container">
     <div class="mini-container">
         <h1>Send me an Email</h1>
+        <p class="link">emails are sent to <a href="https://github.com/ahmadbenos">me</a></p>
         <% if(email_sent != ""){ %>
         <div class="success-alert">
             <p><%= email_sent %></p>
